color contrast resolved

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #0d440d;
+    --primary-color: #032903;
     --secondary-color: #f5b37e;
     --accent1-color: #172a31;
     --accent2-color: #f5e39c;
